// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuidedLearningDemo Snapshot matches snapshot in initial state 1`] = `
<div
  class="max-w-6xl mx-auto p-4"
>
  <div
    class="bg-gray-50 rounded-lg p-6 mb-6"
  >
    <h1
      class="text-2xl font-bold mb-6"
    >
      Dashboard
    </h1>
    <div
      class="grid grid-cols-1 md:grid-cols-4 gap-6"
    >
      <div
        class="navigation-menu bg-white rounded-lg p-4 shadow"
      >
        <h3
          class="font-semibold mb-4"
        >
          Navigation
        </h3>
        <ul
          class="space-y-2"
        >
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Dashboard
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Analytics
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Reports
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Settings
            </a>
          </li>
        </ul>
      </div>
      <div
        class="md:col-span-3 analytics-section bg-white rounded-lg p-4 shadow"
      >
        <div
          class="flex justify-between items-center mb-4"
        >
          <h3
            class="font-semibold"
          >
            Analytics Overview
          </h3>
          <div
            class="flex gap-2"
          >
            <select
              class="filter-dropdown border rounded px-2 py-1"
            >
              <option>
                Last 7 days
              </option>
              <option>
                Last 30 days
              </option>
              <option>
                Last 3 months
              </option>
            </select>
            <button
              class="export-button bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700"
            >
              Export
            </button>
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-3 gap-4"
        >
          <div
            class="bg-blue-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Total Users
            </h4>
            <p
              class="text-2xl font-bold text-blue-600"
            >
              1,234
            </p>
          </div>
          <div
            class="bg-green-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Revenue
            </h4>
            <p
              class="text-2xl font-bold text-green-600"
            >
              $12,345
            </p>
          </div>
          <div
            class="bg-purple-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Conversion Rate
            </h4>
            <p
              class="text-2xl font-bold text-purple-600"
            >
              3.2%
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-white rounded-lg shadow p-6"
  >
    <div
      class="flex items-start gap-4"
    >
      <svg
        class="w-8 h-8 text-blue-600 mt-1"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 8c-1.657 0-3 1.343-3 3s1.343 3 3 3 3-1.343 3-3-1.343-3-3-3z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M12 1v6m0 6v6m11-7h-6m-6 0H1"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <div
        class="flex-1"
      >
        <h2
          class="text-xl font-semibold mb-2"
        >
          Dashboard Basics
        </h2>
        <p
          class="text-gray-600 mb-4"
        >
          Learn how to navigate and use your dashboard effectively
        </p>
        <div
          class="flex gap-4 text-sm text-gray-500 mb-4"
        >
          <span
            class="flex items-center gap-1"
          >
            <span
              class="px-2 py-1 rounded text-xs bg-green-100 text-green-800"
            >
              beginner
            </span>
          </span>
          <span>
            ⏱️ 
            5 minutes
          </span>
          <span>
            📋 
            5
             steps
          </span>
        </div>
        <button
          class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 flex items-center gap-2"
        >
          Start Tutorial
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <style>
    
          .tutorial-highlight {
            position: relative;
            box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.5) !important;
            border-radius: 4px;
            z-index: 10;
          }
          
          .tutorial-highlight::after {
            content: '';
            position: absolute;
            top: -8px;
            right: -8px;
            width: 16px;
            height: 16px;
            background: #3B82F6;
            border-radius: 50%;
            animation: pulse 2s infinite;
          }
          
          @keyframes pulse {
            0% {
              transform: scale(0.95);
              box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7);
            }
            
            70% {
              transform: scale(1);
              box-shadow: 0 0 0 10px rgba(59, 130, 246, 0);
            }
            
            100% {
              transform: scale(0.95);
              box-shadow: 0 0 0 0 rgba(59, 130, 246, 0);
            }
          }
        
  </style>
</div>
`;

exports[`GuidedLearningDemo Snapshot matches snapshot when tutorial is active 1`] = `
<div
  class="max-w-6xl mx-auto p-4"
>
  <div
    class="bg-gray-50 rounded-lg p-6 mb-6"
  >
    <h1
      class="text-2xl font-bold mb-6"
    >
      Dashboard
    </h1>
    <div
      class="grid grid-cols-1 md:grid-cols-4 gap-6"
    >
      <div
        class="navigation-menu bg-white rounded-lg p-4 shadow"
      >
        <h3
          class="font-semibold mb-4"
        >
          Navigation
        </h3>
        <ul
          class="space-y-2"
        >
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Dashboard
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Analytics
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Reports
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Settings
            </a>
          </li>
        </ul>
      </div>
      <div
        class="md:col-span-3 analytics-section bg-white rounded-lg p-4 shadow"
      >
        <div
          class="flex justify-between items-center mb-4"
        >
          <h3
            class="font-semibold"
          >
            Analytics Overview
          </h3>
          <div
            class="flex gap-2"
          >
            <select
              class="filter-dropdown border rounded px-2 py-1"
            >
              <option>
                Last 7 days
              </option>
              <option>
                Last 30 days
              </option>
              <option>
                Last 3 months
              </option>
            </select>
            <button
              class="export-button bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700"
            >
              Export
            </button>
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-3 gap-4"
        >
          <div
            class="bg-blue-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Total Users
            </h4>
            <p
              class="text-2xl font-bold text-blue-600"
            >
              1,234
            </p>
          </div>
          <div
            class="bg-green-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Revenue
            </h4>
            <p
              class="text-2xl font-bold text-green-600"
            >
              $12,345
            </p>
          </div>
          <div
            class="bg-purple-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Conversion Rate
            </h4>
            <p
              class="text-2xl font-bold text-purple-600"
            >
              3.2%
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
  >
    <div
      class="bg-white rounded-lg shadow-xl max-w-md w-full m-4"
    >
      <div
        class="p-4 border-b"
      >
        <div
          class="flex justify-between text-sm text-gray-600 mb-2"
        >
          <span>
            Step 
            1
             of 
            5
          </span>
          <span>
            20
            % complete
          </span>
        </div>
        <div
          class="w-full bg-gray-200 rounded-full h-2"
        >
          <div
            class="bg-blue-600 h-2 rounded-full transition-all duration-300"
            style="width: 20%;"
          />
        </div>
      </div>
      <div
        class="p-6"
      >
        <h3
          class="text-lg font-semibold mb-2"
        >
          Welcome to Your Dashboard
        </h3>
        <p
          class="text-gray-600 mb-4"
        >
          Your dashboard is your central hub for managing all activities. We'll guide you through each section step by step.
        </p>
      </div>
      <div
        class="p-4 border-t flex justify-between items-center"
      >
        <div
          class="flex gap-2"
        >
          <button
            class="flex items-center gap-1 px-3 py-1 text-sm border rounded disabled:opacity-50 disabled:cursor-not-allowed hover:bg-gray-50"
            disabled=""
          >
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 19l-7-7 7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Previous
          </button>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            class="px-3 py-1 text-sm text-gray-600 hover:text-gray-800"
          >
            Skip Tutorial
          </button>
          <button
            class="flex items-center gap-1 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
          >
            Next
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 5l7 7-7 7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <style>
    
          .tutorial-highlight {
            position: relative;
            box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.5) !important;
            border-radius: 4px;
            z-index: 10;
          }
          
          .tutorial-highlight::after {
            content: '';
            position: absolute;
            top: -8px;
            right: -8px;
            width: 16px;
            height: 16px;
            background: #3B82F6;
            border-radius: 50%;
            animation: pulse 2s infinite;
          }
          
          @keyframes pulse {
            0% {
              transform: scale(0.95);
              box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7);
            }
            
            70% {
              transform: scale(1);
              box-shadow: 0 0 0 10px rgba(59, 130, 246, 0);
            }
            
            100% {
              transform: scale(0.95);
              box-shadow: 0 0 0 0 rgba(59, 130, 246, 0);
            }
          }
        
  </style>
</div>
`;

exports[`GuidedLearningDemo Snapshot matches snapshot when tutorial is completed 1`] = `
<div
  class="max-w-6xl mx-auto p-4"
>
  <div
    class="bg-gray-50 rounded-lg p-6 mb-6"
  >
    <h1
      class="text-2xl font-bold mb-6"
    >
      Dashboard
    </h1>
    <div
      class="grid grid-cols-1 md:grid-cols-4 gap-6"
    >
      <div
        class="navigation-menu bg-white rounded-lg p-4 shadow"
      >
        <h3
          class="font-semibold mb-4"
        >
          Navigation
        </h3>
        <ul
          class="space-y-2"
        >
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Dashboard
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Analytics
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Reports
            </a>
          </li>
          <li>
            <a
              class="text-blue-600 hover:underline"
              href="#"
            >
              Settings
            </a>
          </li>
        </ul>
      </div>
      <div
        class="md:col-span-3 analytics-section bg-white rounded-lg p-4 shadow"
      >
        <div
          class="flex justify-between items-center mb-4"
        >
          <h3
            class="font-semibold"
          >
            Analytics Overview
          </h3>
          <div
            class="flex gap-2"
          >
            <select
              class="filter-dropdown border rounded px-2 py-1"
            >
              <option>
                Last 7 days
              </option>
              <option>
                Last 30 days
              </option>
              <option>
                Last 3 months
              </option>
            </select>
            <button
              class="export-button bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700"
            >
              Export
            </button>
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-3 gap-4"
        >
          <div
            class="bg-blue-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Total Users
            </h4>
            <p
              class="text-2xl font-bold text-blue-600"
            >
              1,234
            </p>
          </div>
          <div
            class="bg-green-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Revenue
            </h4>
            <p
              class="text-2xl font-bold text-green-600"
            >
              $12,345
            </p>
          </div>
          <div
            class="bg-purple-50 p-4 rounded"
          >
            <h4
              class="font-medium"
            >
              Conversion Rate
            </h4>
            <p
              class="text-2xl font-bold text-purple-600"
            >
              3.2%
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-white rounded-lg shadow p-6"
  >
    <div
      class="flex items-start gap-4"
    >
      <svg
        class="w-8 h-8 text-blue-600 mt-1"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 8c-1.657 0-3 1.343-3 3s1.343 3 3 3 3-1.343 3-3-1.343-3-3-3z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M12 1v6m0 6v6m11-7h-6m-6 0H1"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <div
        class="flex-1"
      >
        <h2
          class="text-xl font-semibold mb-2"
        >
          Dashboard Basics
        </h2>
        <p
          class="text-gray-600 mb-4"
        >
          Learn how to navigate and use your dashboard effectively
        </p>
        <div
          class="flex gap-4 text-sm text-gray-500 mb-4"
        >
          <span
            class="flex items-center gap-1"
          >
            <span
              class="px-2 py-1 rounded text-xs bg-green-100 text-green-800"
            >
              beginner
            </span>
          </span>
          <span>
            ⏱️ 
            5 minutes
          </span>
          <span>
            📋 
            5
             steps
          </span>
        </div>
        <div
          class="flex items-center text-green-600 mb-4"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13l4 4L19 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Tutorial completed!
        </div>
        <button
          class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 flex items-center gap-2"
        >
          Restart Tutorial
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <style>
    
          .tutorial-highlight {
            position: relative;
            box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.5) !important;
            border-radius: 4px;
            z-index: 10;
          }
          
          .tutorial-highlight::after {
            content: '';
            position: absolute;
            top: -8px;
            right: -8px;
            width: 16px;
            height: 16px;
            background: #3B82F6;
            border-radius: 50%;
            animation: pulse 2s infinite;
          }
          
          @keyframes pulse {
            0% {
              transform: scale(0.95);
              box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7);
            }
            
            70% {
              transform: scale(1);
              box-shadow: 0 0 0 10px rgba(59, 130, 246, 0);
            }
            
            100% {
              transform: scale(0.95);
              box-shadow: 0 0 0 0 rgba(59, 130, 246, 0);
            }
          }
        
  </style>
</div>
`;
